
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 unsigned char* aes_ofb_decrypt (unsigned char*,int,unsigned char*,unsigned char*) ;
 unsigned char* aes_ofb_encrypt (unsigned char*,int,unsigned char*,unsigned char*) ;
 int printf (char*,...) ;
 int strlen (char*) ;

void main() {




    unsigned char * regVal = "\xcc\x6d\xc9\x3b\xa0\xcc\x4c\x76\x55\xc9\x3b\x9f";




    int regLength = 12;
    unsigned char key[32] = "braantonsiteaa.webex.com/siteaab";




    unsigned char iv[16] = { 0x12, 0x34, 0x56, 0x78, 0x9a, 0xbc, 0xde, 0xf0, 0x34, 0x56, 0x78, 0x9a, 0xbc, 0xde, 0xf0, 0x12 };




    unsigned char * password = "bradbradbrad";
    int pwLength = strlen((char *)password);

    unsigned char * enc = ((void*)0);
    unsigned char * enc2 = ((void*)0);
    int i = 0;


    printf("Reg Key Value = ");
    enc = aes_ofb_encrypt(password, pwLength, key, iv);
    for(i=0;i<pwLength;i++) {
        printf("%02x ", enc[i]);
    }
    printf("\n");

    printf("Password = ");
    enc2 = aes_ofb_decrypt(regVal, regLength, key, iv);
    for(i=0;i<regLength;i++) {
        printf("%c", enc2[i]);
    }
    printf("\n");


}
